# SLAM_EKF_SCRATCH_TURTLEBOT3

./: .gitignore  README.md  Tasks.md  citations.txt  turtle.repos
nusim/: CMakeLists.txt  README.md  package.xml
nusim/config/: basic_world.yaml  basic_world_laser.yaml  basic_world_laser_1obs.yaml  basic_world_laser_3obs.yaml  basic_world_laser_5obs.yaml  basic_world_laser_7obs.yaml  laser_params.yaml  nusim.rviz
nusim/launch/: nusim.launch.xml
nusim/src/: nusim.cpp
nuslam/: CMakeLists.txt  README.md  package.xml
nuslam/config/: detect_landmarks.rviz  landmark_detect.yaml  landmarks.rviz  slam.yaml
nuslam/include/nuslam/: ekf.hpp
nuslam/launch/: landmark_detect.launch.xml  pc_bringup.launch.xml  slam.launch.xml  turtlebot_bringup.launch.xml  unknown_data_assoc.launch.xml
nuslam/src/: ekf.cpp  landmarks.cpp  slam_odom.cpp
nuslam/tests/: circle_test.cpp
nuturtle_control/: CMakeLists.txt  package.xml
nuturtle_control/config/: load_nusim_odometry.rviz
nuturtle_control/launch/: start_robot.launch.xml
nuturtle_control/src/: circle.cpp  odometry.cpp  turtle_control.cpp
nuturtle_control/test/: turtle_circle_test.cpp  turtle_circle_test.launch.xml  turtle_control_test.cpp  turtle_control_test.launch.xml  turtle_odom_test.cpp  turtle_odom_test.launch.xml
nuturtle_control_interfaces/: CMakeLists.txt  package.xml
nuturtle_control_interfaces/srv/: Control.srv  InitialPose.srv
nuturtle_description/: CMakeLists.txt  README.md  package.xml
nuturtle_description/config/: basic_all.rviz  diff_params.yaml  load_one.rviz  load_one_blue.rviz  load_one_green.rviz  load_one_purple.rviz  load_one_red.rviz
nuturtle_description/launch/: load_all.launch.xml  load_one.launch.xml
nuturtle_description/urdf/: common_properties.urdf.xacro  turtlebot3_burger.urdf.xacro
slamlib/: CMAKELists.txt  CMakeLists.txt
slamlib/include/slamlib/: circle_reg.hpp  ekf.hpp
slamlib/src/: circle_reg.cpp  ekf.cpp
slamlib/tests/: data_assoc_test.cpp
turtlelib/: CMakeLists.txt  README.md
turtlelib/exercises/: B6_frame_input.txt  B6_frame_output.txt
turtlelib/include/turtlelib/: angle.hpp  diff_drive.hpp  geometry2d.hpp  se2d.hpp  svg.hpp  turtlelib.h
turtlelib/src/: converter.cpp  diff_drive.cpp  frame_main.cpp  geometry2d.cpp  main.cpp  se2d.cpp  svg.cpp  test_write.cpp  turtlelib.cpp
turtlelib/tests/: test_diff_drive.cpp  test_ex.cpp  test_geometry2d.cpp  test_se2d.cpp  test_svg.cpp
