<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nuslam</name>
  <version>0.26.1</version>
  <description>EKF SLAM for NuTurtleBot on the Turtlebot3</description>
  <maintainer email="nolanknight2026@u.northwestern.edu">Nolan Knight</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

    <!-- Depends: -->
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>nuturtle_control_interfaces</depend>
    <depend>nuturtlebot_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>turtlelib</depend>
    <depend>slamlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
