<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nuturtle_control</name>
  <version>0.2.6</version>
  <description>Control package for nuturtle robot</description>
  <maintainer email="nolanknight2026@u.northwestern.edu">Nolan Knight</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Test Depends: -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>nuturtle_control_interfaces</test_depend>
  <test_depend>nuturtlebot_msgs</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Depends: -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nuturtle_control_interfaces</depend>
  <depend>nuturtlebot_msgs</depend>
  <depend>catch_ros2</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlelib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
